Added UI for the Daily Test Data

--- a/src/assets/styles/_color.scss
+++ b/src/assets/styles/_color.scss
@@ -36,3 +36,4 @@ $badge-private         : #bccce4;
 $user-story-placeholder: #D8d8d8;
 $read-only-bg          : #F7F7F7;
 $loved-it              : #e55960;
+$error-msg             : #d0021b;
