--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 /*   component styles Authenication    */
 @import './components/authenication/_authenication.scss';
 @import './components/authenication/login/_login.scss';
+@import './components/dailyTestData/dailyTestData.scss';
